tests/snapshots/docx/apache-tika/testWORD_template.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
assertion_line: 56
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
       0: StartDocument { id: None, language: None, metadata: None }
       1: StartParagraph { alignment: None, id: None }
       2: Text { content: "Objective" }
       3: EndParagraph
       4: StartParagraph { alignment: None, id: None }
       5: Text { content: "Getting the perfect job might be challenging, " }
       6: Text { content: "but a great-looking résumé doesn’t have to be! We’ve provided a few quick tips to help you get started. To replace any tip text with your own, just click it and start typing." }
       7: EndParagraph
       8: StartParagraph { alignment: None, id: None }
       9: Text { content: "Need another experience or education entry? You got it. Just click in the sample " }
      10: Text { content: "entries below and then click the plus sign that appears. Looking for a matching cover letter? All you had to do was ask! On the Insert tab, click Cover Page." }
      11: EndParagraph
      12: StartParagraph { alignment: None, id: None }
      13: Text { content: "Experience" }
      14: EndParagraph
      15: StartParagraph { alignment: None, id: None }
      16: Text { content: "[Dates From - To]" }
      17: EndParagraph
      18: StartParagraph { alignment: None, id: None }
      19: Text { content: "Metallica" }
      20: EndParagraph
      21: StartParagraph { alignment: None, id: None }
      22: Text { content: "Guitarist" }
      23: EndParagraph
      24: StartUnorderedListItem { id: Some("4"), level: 0, style_type: Disc }
      25: StartParagraph { alignment: None, id: None }
      26: Text { content: "Slept with one eye open gripping my pillow tight" }
      27: EndParagraph
      28: EndUnorderedListItem
      29: StartParagraph { alignment: None, id: None }
      30: Text { content: "E" }
      31: Text { content: "ducation" }
      32: EndParagraph
      33: StartParagraph { alignment: None, id: None }
      34: Text { content: "[Dates From - To]" }
      35: EndParagraph
      36: StartParagraph { alignment: None, id: None }
      37: Text { content: "[School Name, Location]" }
      38: EndParagraph
      39: StartParagraph { alignment: None, id: None }
      40: Text { content: "[Degree]" }
      41: EndParagraph
      42: StartUnorderedListItem { id: Some("4"), level: 0, style_type: Disc }
      43: StartParagraph { alignment: None, id: None }
      44: Text { content: "Click here to enter text." }
      45: EndParagraph
      46: EndUnorderedListItem
      47: StartUnorderedListItem { id: Some("4"), level: 0, style_type: Disc }
      48: StartParagraph { alignment: None, id: None }
      49: Text { content: "Click here to enter text" }
      50: EndParagraph
      51: EndUnorderedListItem
      52: StartParagraph { alignment: None, id: None }
      53: Text { content: "References" }
      54: EndParagraph
      55: StartParagraph { alignment: None, id: None }
      56: Text { content: "References are available upon request." }
      57: EndParagraph
      58: EndDocument
  ],
  terminal: Ok,
}
