tests/snapshots/docx/apache-tika/testWORD_text_box.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "This text is directly in the body of the document." },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
