tests/snapshots/docx/apache-tika/testWORD_totalTimeOutOfRange.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "This is a bold " },
    StartLink { href: "http://tika.apache.org/", id: None, title: None },
    Text { content: "hy" },
    Text { content: "per" },
    Text { content: "  " },
    StartTextStyle { kind: Bold, id: None },
    Text { content: "link" },
    EndTextStyle,
    EndLink,
    Text { content: ";" },
    Text { content: " bold, I sa" },
    Text { content: "y. " },
    StartLink { href: "http://tika.apache.org/", id: None, title: None },
    StartTextStyle { kind: Bold, id: None },
    Text { content: "hyper" },
    EndTextStyle,
    Text { content: "  link" },
    EndLink,
    Text { content: "; bol" },
    Text { content: "d, I say." },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
