tests/snapshots/docx/apache-tika/testWORD_various.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "Footnote appears here" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    StartTextStyle { kind: Bold, id: None },
    Text { content: "Bold" },
    EndTextStyle,
    Text { content: " " },
    StartTextStyle { kind: Italic, id: None },
    Text { content: "italic" },
    EndTextStyle,
    Text { content: " " },
    StartTextStyle { kind: Underline, id: None },
    Text { content: "underline" },
    EndTextStyle,
    Text { content: " " },
    StartTextStyle { kind: Superscript, id: None },
    Text { content: "superscript" },
    EndTextStyle,
    Text { content: " " },
    StartTextStyle { kind: Subscript, id: None },
    Text { content: "subscript " },
    EndTextStyle,
    StartTextStyle { kind: Strikethrough, id: None },
    StartTextStyle { kind: Subscript, id: None },
    Text { content: "strikethrough" },
    EndTextStyle,
    EndTextStyle,
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    StartTextStyle { kind: Italic, id: None },
    Text { content: "ita" },
    EndTextStyle,
    StartTextStyle { kind: Italic, id: None },
    StartTextStyle { kind: Strikethrough, id: None },
    Text { content: "li" },
    EndTextStyle,
    EndTextStyle,
    StartTextStyle { kind: Italic, id: None },
    Text { content: "c" },
    EndTextStyle,
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    StartTextStyle { kind: Italic, id: None },
    Text { content: "ita" },
    EndTextStyle,
    StartTextStyle { kind: Italic, id: None },
    StartTextStyle { kind: Strikethrough, id: None },
    Text { content: "l" },
    EndTextStyle,
    EndTextStyle,
    StartTextStyle { kind: Italic, id: None },
    StartTextStyle { kind: Strikethrough, id: None },
    StartTextStyle { kind: Underline, id: None },
    Text { content: "i" },
    EndTextStyle,
    EndTextStyle,
    EndTextStyle,
    StartTextStyle { kind: Italic, id: None },
    Text { content: "c" },
    EndTextStyle,
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    StartTextStyle { kind: Italic, id: None },
    StartTextStyle { kind: Underline, id: None },
    Text { content: "unde" },
    EndTextStyle,
    EndTextStyle,
    StartTextStyle { kind: Italic, id: None },
    StartTextStyle { kind: Strikethrough, id: None },
    StartTextStyle { kind: Underline, id: None },
    Text { content: "r" },
    EndTextStyle,
    EndTextStyle,
    EndTextStyle,
    StartTextStyle { kind: Italic, id: None },
    StartTextStyle { kind: Underline, id: None },
    Text { content: "line" },
    EndTextStyle,
    EndTextStyle,
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "Here is a list:" },
    EndParagraph,
    StartUnorderedListItem { id: Some("1"), level: 0, style_type: Disc },
    StartParagraph { alignment: None, id: None },
    Text { content: "Bullet 1" },
    EndParagraph,
    EndUnorderedListItem,
    StartUnorderedListItem { id: Some("1"), level: 0, style_type: Disc },
    StartParagraph { alignment: None, id: None },
    Text { content: "Bullet 2" },
    EndParagraph,
    EndUnorderedListItem,
    StartUnorderedListItem { id: Some("1"), level: 0, style_type: Disc },
    StartParagraph { alignment: None, id: None },
    Text { content: "Bullet 3" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "Here is a numbered list:" },
    EndParagraph,
    EndUnorderedListItem,
    StartOrderedListItem { id: Some("2"), level: 0, start: Some(1), style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "Number bullet 1" },
    EndParagraph,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("2"), level: 0, start: None, style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "Number bullet 2" },
    EndParagraph,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("2"), level: 0, start: None, style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "Number bullet 3" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: " " },
    Text { content: "Keyword1 Keyword2" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    StartLink { href: "http://tika.apache.org/", id: None, title: None },
    Text { content: "This is a hyperlink" },
    EndLink,
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: " " },
    Text { content: "Subject is here" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndOrderedListItem,
    StartTable { id: None },
    StartTableRow { id: None },
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "Row 1 Col 1" },
    EndParagraph,
    EndTableCell,
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "Row 1 Col 2" },
    EndParagraph,
    EndTableCell,
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "Row 1 Col 3" },
    EndParagraph,
    EndTableCell,
    EndTableRow,
    StartTableRow { id: None },
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "Row 2 Col 1" },
    EndParagraph,
    EndTableCell,
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "Row 2 Col 2" },
    EndParagraph,
    EndTableCell,
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "Row 2 Col 3" },
    EndParagraph,
    EndTableCell,
    EndTableRow,
    EndTable,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "Suddenly some Japanese text:" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "ゾルゲと尾崎、淡々と最期" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "（ＧＨＱ）" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "And then some Gothic text:" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "𐌲𐌿𐍄𐌹𐍃𐌺" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "Here is a citation:" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "(Kramer)" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "Figure " },
    Text { content: "1" },
    Text { content: " This is a caption for Figure 1" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "Row 1 column 1" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "Row 2 column 1" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "Row 1 column 2" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "Row 2 column 2" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: Some(Left), id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
