tests/snapshots/docx/apache-tika/test_recursive_embedded_npe.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
       0: StartDocument { id: None, language: None, metadata: None }
       1: StartParagraph { alignment: None, id: None }
       2: Text { content: "embed_0  " }
       3: EndParagraph
       4: StartParagraph { alignment: None, id: None }
       5: EndParagraph
       6: StartParagraph { alignment: None, id: None }
       7: EndParagraph
       8: EndDocument
  ],
  terminal: Ok,
}
